# devtest

./: .dockerignore  .env  .env.test  .gitignore  Api.py  CRUD.ipynb  DDL.sql  Data_Preparation.ipynb  Dockerfile  Dockerfile.getter  Documentation.md  Elevator_Project_Citric_Sheep.ipynb  Makefile  Original_requirement_readme.md  README.md  app.py  commit.sh  commons.py  controllers.py  create_database.ipynb  create_db.py  create_table.py  credentials.py  crud_data.ipynb  crud_elevator.py  data.py  data_generation.py  database.db  database.py  datagather.py  db.py  db.sql  docker-compose.yml  dockerfile  documentation.md  elevator.py  elevator_events.db  elevator_operation_dataset.csv  elevator_project.db  elevator_variables.json  (+34 more)
CRUD/: CRUD.py
api/: crud.py  database.py  main.py  models.py  schemas.py
app/: Dockerfile  __init__.py  constants.py  db.py  main.py  models.py  process.py  requirements.txt  routes.py  schemas.py
cli/: __main__.py
configuration/: configuration.py
controllers/: building_controllers.py  demand_controllers.py  elevator_controllers.py
data/: database.sqlite
database/: db_configuration.py  db_models.py  db_utilities.py  elevator.db  schema.sql
elevator/: app.py  crud.py  database.py  model.py  schema.py
elevator_api/: .gitignore  .pre-commit-config.yaml  README.md  elevator_api.sqlite3  local.yml  manage.py  output.csv  production.yml  pyproject.toml
instance/: elevator.db
migrations/: env.py
models/: elevator_history_entry.py  models.py
nginx/: nginx.conf
rules/: floorRule.py
scr/: crud_elevator.py  generate_dataset.py  (+3 more)
(+202 files in other folders)
