[tool.poetry]
name = "elevator"
version = "0.1.0"
description = "Citric Sheep - elevator test"
authors = ["ankandrew <61120139+ankandrew@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
tabulate = "^0.9.0"
pandas = "^2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
freezegun = "^1.4.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
sqlalchemy-stubs = "^0.4"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
